--- a/rijk/templates/index.html
+++ b/rijk/templates/index.html
@@ -2,20 +2,31 @@
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    
-
+    <script id="art" src="/static/art.js" type="text/javascript" charset="utf-8" async defer></script>
+    <link rel="stylesheet" href="static/rijks_style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
-<body>
-	<div class="container">
-<div class="jumbotron">
-  <h1>Rijks gallery</h1> 
-  <div class="container" id="art-frame"></div>
-</div>
-<button data-action="run" data-code="#art" data-target="#singletile" class="btn btn-primary">run this code</button></div>
 
+<body>
+    <div class="container" id="main-container">
+        <img src="{{ artimg }}" class="mx-auto d-block" style="display:inline" alt="Gallery image">
+        <div class="card">
+            <div class="card-body" id="cardbod">
+                <p>{{ artlongtitle }}</p>
+               <a href="{{ artlink }}"> <button type="button" class="btn btn-warning"><i class="fas fa-archway"></i>
+
+See on Rijksmusem site </button>
+                 </a>
+
+<button type="button" onclick="self.location.reload()" class="btn btn-info"><i class="fas fa-random">Random item</i></button>
+                
+                
+            </div>
+        </div>
+        </div>
 </body>
-<script id="art" src="/static/art.js" type="text/javascript" charset="utf-8" async defer></script>
+
 </html>
