--- a/rijk/templates/index.html
+++ b/rijk/templates/index.html
@@ -16,17 +16,13 @@
         <div class="card">
             <div class="card-body" id="cardbod">
                 <p>{{ artlongtitle }}</p>
-               <a href="{{ artlink }}"> <button type="button" class="btn btn-warning"><i class="fas fa-archway"></i>
-
-See on Rijksmusem site </button>
-                 </a>
-
-<button type="button" onclick="self.location.reload()" class="btn btn-info"><i class="fas fa-random">Random item</i></button>
-                
-                
+                <a href="{{ artlink }}">
+                    <button type="button" class="btn btn-warning"><i class="fas fa-archway"></i> See on Rijksmusem site </button>
+                </a>
+                <button type="button" onclick="self.location.reload()" class="btn btn-info"><i class="fas fa-random">Random item</i></button>
             </div>
         </div>
-        </div>
+    </div>
 </body>
 
 </html>
