--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <a id="gh" href="https://github.com/john-lock/rijk">View on Github
+    <img src="/static/github.png"></a>
     <div class="container" id="main-container">
         <img src="{{ artimg }}" class="mx-auto d-block" style="display:inline" alt="Gallery image">
         <div class="card">
